# cdd-prime-hybrid-env

./: .env.example  .gitignore  CDD_HYBRID_EXECUTION_TODO.md  EXECUTION_REPORT.md  Makefile  PRIMEINTELLECT_DOCS_FULL_DIGEST.md  PRIMEINTELLECT_DOCS_REVIEW.md  README.md  SUPER_CDD_PLAN.md  primeintellect_docs_coverage.md  primeintellect_docs_index.json  primeintellect_llms.txt  primeintellect_llms_full.txt  primeintellect_openapi.json  primeintellect_relevant_sections.md  pyproject.toml  toolchain.lock.toml
.github/workflows/: ci.yml
configs/endpoints/: endpoints.toml.example
configs/eval/: cdd_hybrid.toml
configs/prime-rl/: cdd_hybrid.toml
data/interim/: deal_packets.jsonl  deals_enriched.csv  eval_metrics.json  heuristic_predictions_test.jsonl  memorization_probe_results.jsonl  model_judge_results.jsonl  text_evidence.jsonl
environments/cdd_hybrid/: README.md  cdd_hybrid.py  pyproject.toml
reports/: benchmark_report.md  benchmark_summary.json  group_metrics.json  model_judge_summary.json  phase_results.md  seed_summary.json
scripts/: build_outcomes.py  build_packets.py  check_prime_openapi_contract.py  check_regression_thresholds.py  check_toolchain.py  enrich_text_evidence.py  evaluate_group_policy.py  evaluate_predictions.py  expand_deals_from_wikipedia.py  full_pipeline.sh  merge_deal_sources.py  run_heuristic_baseline.py  run_memorization_probe.py  run_model_judge.py  run_model_matrix.py  run_seed_optimization.py  smoke_pipeline.sh  split_dataset.py  validate_dataset.py
tests/: test_group_metrics.py  test_leakage.py  test_metrics.py  test_schema.py
(+11 files in other folders)
